--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
+    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
+    "lint:eslint:check": "npx eslint"
   },
   "author": "",
   "license": "MIT",
@@ -29,7 +30,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "concurrently": "^8.2.2",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "jest": "^29.6.2",
     "prettier": "^2.8.8"
   }
